feature TDI-25060 added: Fixed a bug for tos bigdata in pigudf
git-svn-id: http://talendforge.org/svn/tos/trunk@100102 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.pigudf/plugin.xml
+++ b/org.talend.repository.pigudf/plugin.xml
@@ -5,13 +5,12 @@
          point="org.eclipse.ui.navigator.navigatorContent">
       <navigatorContent
             activeByDefault="true"
-            appearsBefore="org.talend.repository.viewer.code.jobscript"
             contentProvider="org.talend.repository.pigudf.content.PigudfContentProvider"
             icon="icons/pigudf.gif"
             id="org.talend.repository.viewer.code.PigUdf"
             labelProvider="org.talend.repository.viewer.label.RepositoryViewLabelProvider"
             name="%NavigatorContent.pigUdf"
-            priority="normal">
+            priority="high">
       <triggerPoints>
            <and>
               <instanceof
