Fix Feature TDI-25224 : Support for Hive server 2 https://jira.talendforge.org/browse/TDI-25224
git-svn-id: http://talendforge.org/svn/tos/trunk@100170 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -48,6 +48,10 @@ HIVE_VERSION.ITEM.MAPR1=MapR 1.2.0
 HIVE_VERSION.ITEM.MapR_EMR=MapR 1.2.8
 HIVE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Hive 0.8.1)
 
+HIVE_SERVER.NAME=Hive Server
+HIVE_SERVER.ITEM.HIVE=Hive 1
+HIVE_SERVER.ITEM.HIVE2=Hive 2
+
 CONNECTION_MODE.NAME=Connection mode
 CONNECTION_MODE.ITEM.EMBEDDED=Embedded
 CONNECTION_MODE.ITEM.STANDALONE=Standalone
