--- a/org.talend.repository.hadoopcluster/plugin.xml
+++ b/org.talend.repository.hadoopcluster/plugin.xml
@@ -47,7 +47,7 @@
             class="org.talend.repository.hadoopcluster.tester.HadoopClusterMetadataNodeTester"
             id="org.talend.repository.hadoopcluster.node.tester.hadoopcluster"
             namespace="org.talend.repository.node.metadata"
-            properties="isHadoopClusterConnection,isHadoopSubconnection,isHadoopSubconnectionSchema,isHadoopSubconnectionSchemaColumn"
+            properties="isHadoopClusterConnection,isHadoopSubconnection,isHadoopSubconnectionSchema,isHadoopSubconnectionSchemaColumn,isHadoopFolder,isHadoopDbConnection"
             type="org.talend.repository.model.RepositoryNode">
       </propertyTester>
    </extension>
@@ -81,7 +81,7 @@
             contentProvider="org.talend.repository.hadoopcluster.ui.MetadataHadoopClusterContentProvider"
             icon="icons/hadoop-logo-16x16.png"
             id="org.talend.repository.viewer.metadata.hadoopcluster"
-            labelProvider="org.talend.repository.viewer.label.RepositoryViewLabelProvider"
+            labelProvider="org.talend.repository.hadoopcluster.ui.provider.HadoopLabelProvider"
             name="HadoopCluster"
             priority="high">
          <possibleChildren>
@@ -102,6 +102,12 @@
                   <test
                         property="org.talend.repository.node.metadata.isHadoopSubconnectionSchemaColumn">
                   </test>
+                  <test
+                        property="org.talend.repository.node.metadata.isHadoopFolder">
+                  </test>
+                  <test
+                        property="org.talend.repository.node.metadata.isHadoopDbConnection">
+                  </test>
                </or>
             </and>
          </possibleChildren>
@@ -121,11 +127,14 @@
                   <test
                         property="org.talend.repository.node.metadata.isHadoopSubconnection">
                   </test>
+                  <test
+                        property="org.talend.repository.node.metadata.isHadoopFolder">
+                  </test>
                </or>
             </and>
          </triggerPoints>
          <actionProvider
-               class="org.talend.repository.metadata.action.MetedataNodeActionProvier"
+               class="org.talend.repository.hadoopcluster.ui.provider.HadoopNodeActionProvier"
                id="org.talend.repository.hadoopcluster.action.provider.id">
             <enablement>
                <and>
@@ -134,7 +143,6 @@
                   </instanceof>
                   <or>
                      <test
-                           forcePluginActivation="true"
                            property="org.talend.repository.node.metadata.isHadoopClusterConnection">
                      </test>
                      <test
@@ -145,6 +153,12 @@
                      </test>
                      <test
                            property="org.talend.repository.node.metadata.isHadoopSubconnectionSchemaColumn">
+                     </test>
+                     <test
+                           property="org.talend.repository.node.metadata.isHadoopFolder">
+                     </test>
+                     <test
+                           property="org.talend.repository.node.metadata.isHadoopDbConnection">
                      </test></or>
                   <not>
                      <test
@@ -179,5 +193,24 @@
               name="MoveHDFSAndHCatalogToHadoopFolderMigrationTask"
               version="5.3.0">
         </projecttask>
+    </extension>
+    <extension
+          point="org.talend.core.repositoryContextualsActions">
+       <Action
+             class="org.talend.repository.hive.action.CreateHiveAction"
+             id="org.talend.repository.hive.action.CreateHiveAction"
+             isEditAction="true"
+             isReadAction="true"
+             level="10"
+             name="Metadata/Create Hive">
+       </Action>
+       <Action
+             class="org.talend.repository.hbase.action.CreateHBaseAction"
+             id="org.talend.repository.hbase.action.CreateHBaseAction"
+             isEditAction="true"
+             isReadAction="true"
+             level="10"
+             name="Metadata/Create HBase">
+       </Action>
     </extension>
 </plugin>
