--- a/org.talend.repository.hadoopcluster/plugin.xml
+++ b/org.talend.repository.hadoopcluster/plugin.xml
@@ -16,7 +16,12 @@
             class="org.talend.repository.model.hadoopcluster.HadoopClusterPackage"
             genModel="model/hadoopcluster.genmodel"/>
    </extension>
-
+   <extension
+         point="org.talend.core.repository.repository_handler">
+      <RepositoryHandler
+            class="org.talend.repository.hadoopcluster.HadoopClusterDragAndDropHandler">
+      </RepositoryHandler>
+   </extension>
    <extension point="org.eclipse.emf.ecore.extension_parser">
       <parser
             type="hadoopcluster"
