Fixed Feature TDI-24130: Add the Teradata specific options in the Sqoop components https://jira.talendforge.org/browse/TDI-24130
git-svn-id: http://talendforge.org/svn/tos/trunk@100383 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
@@ -101,3 +101,18 @@ FS_DEFAULT_NAME.NAME=NameNode URI
 MAPRED_JOB_TRACKER.NAME=JobTracker Host
 
 CONFIGURATION.NAME=Configuration
+
+USE_SPEED_PARALLEL.NAME=Use speed parallel data transfers
+SPECIFIC_PARAMS.NAME=Specific params
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM=Argument
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-method=teradata.db.output.method
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-stage-database=teradata.db.output.stage.database
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-batch-size=teradata.db.output.batch.size
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-fastload-number-max=teradata.db.output.fastload.number.max
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-fastload-socket-host=teradata.db.output.fastload.socket.host
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-fastload-socket-port=teradata.db.output.fastload.socket.port
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-stage-table-suffix=teradata.db.output.stage.table.suffix
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-teradata-text-separator=teradata.db.output.teradata.text.separator
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM_VALUE=Value
+
+SPEED_PARALLEL.NAME=Connector specific configuration
