--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -118,3 +118,12 @@ MAPRED_JOB_TRACKER.NAME=JobTracker Host
 
 CONFIGURATION.NAME=Configuration
 
+USE_SPEED_PARALLEL.NAME=Use speed parallel data transfers
+SPECIFIC_PARAMS.NAME=Specific params
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM=Argument
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-input-method=teradata.db.input.method
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-input-stage-database=teradata.db.input.stage.database
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-input-partition-num=teradata.db.input.partition.num
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-input-batch-size=teradata.db.input.batch.size
+SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM_VALUE=Value
+SPEED_PARALLEL.NAME=Connector specific configuration
