TDI-25315 fixed: Add the Sequence file support in the DI tHDFSIn/tHDFSOut
git-svn-id: http://talendforge.org/svn/tos/trunk@100402 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
@@ -61,3 +61,12 @@ COMPRESSION.ITEM.BZIP2=BZIP2
 COMPRESSION_GROUP.NAME=Compression
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+
+TYPEFILE.NAME=Type
+TYPEFILE.ITEM.TEXT=Text File
+TYPEFILE.ITEM.SEQUENCE=Sequence File
+
+KEYCOLUMN.NAME=Key Column
+VALUECOLUMN.NAME=Value Column
+
+FILE_TYPE.NAME=File Type
