bug TDI-25309 fixed : expression builder UDF autocompletion need add the inputTable node .
git-svn-id: http://talendforge.org/svn/tos/trunk@100527 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.pigmap/plugin.xml
+++ b/org.talend.designer.pigmap/plugin.xml
@@ -27,5 +27,12 @@
             class="org.talend.designer.pigmap.PigMapComponent">
       </ExternalComponent>
    </extension>
+   <extension
+         point="org.talend.core.runtime.service">
+      <Service
+            class="org.talend.designer.pigmap.PigMapService"
+            serviceId="IPigMapService">
+      </Service>
+   </extension>
 
 </plugin>
