feature TDI-24445 : do some optimization for hadoop part like add icons, validations, improve classloader system and so.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@100578 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hcatalog/plugin.xml
+++ b/org.talend.repository.hcatalog/plugin.xml
@@ -13,7 +13,7 @@
       <repositoryNode
             alias="HCAT"
             folder="metadata/hadoop/hcatalog"
-            icon="icons/hadoop-logo-16x16.png"
+            icon="icons/HCatalog_icon16.png"
             isResouce="true"
             label="%hcatalog"
             ordinal="51"
