feature TDI-24445 : do some optimization for hadoop part like add icons, validations, improve classloader system and so.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@100580 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.oozie/plugin.xml
+++ b/org.talend.repository.oozie/plugin.xml
@@ -6,7 +6,7 @@
       <repositoryNode
             alias="Oozie"
             folder="metadata/hadoop/oozie"
-            icon="icons/hadoop-logo-16x16.png"
+            icon="icons/Oozie_icon16.png"
             isResouce="true"
             label="%OOZIE"
             ordinal="52"
