TDI-24418: Modify the value of the DB_VERSION key in the properties files. (The change on BABILI has been done as well).
git-svn-id: http://talendforge.org/svn/tos/trunk@100619 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCouchbaseIn/tCouchbaseIn_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchbaseIn/tCouchbaseIn_messages.properties
@@ -25,7 +25,7 @@ DEBUG.NAME=Debug
 USECOMPLEXKEY.NAME=Use complex key
 COMPLEXKEY.NAME=Complexkey
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.COUCHBASE_2_0=COUCHBASE 2.0
+DB_VERSION.ITEM.COUCHBASE_2_0=Couchbase 2.0
 STARTKEY.NAME=Startkey
 ENDKEY.NAME=Endkey
 STARTKEY_DOCID.NAME=Startkey docid
