--- a/org.talend.designer.components.bigdata/components/tCouchbaseConnection/tCouchbaseConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchbaseConnection/tCouchbaseConnection_messages.properties
@@ -8,4 +8,4 @@ DBNAME.NAME=Data Bucket
 USER.NAME=Username
 PASS.NAME=Password
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.COUCHBASE_2_0=COUCHBASE 2.0
+DB_VERSION.ITEM.COUCHBASE_2_0=Couchbase 2.0
