--- a/org.talend.repository.oozie/build.properties
+++ b/org.talend.repository.oozie/build.properties
@@ -1,8 +1,9 @@
 source.. = src/
 output.. = bin/
-bin.includes = plugin.xml,\
-               META-INF/,\
+bin.includes = .,\
+               plugin.xml,\
                plugin.properties,\
                icons/,\
                lib/json-simple-1.1.jar,\
-               lib/oozie-client-3.0.2.jar
+               lib/oozie-client-3.0.2.jar,\
+               META-INF/
