--- a/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
@@ -33,6 +33,7 @@ HBASE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (HBase 0.92.0)
 HBASE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 HBASE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 HBASE_VERSION.ITEM.MAPR2=MapR 2.0.0
+HBASE_VERSION.ITEM.MAPR212=MapR 2.1.2
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
