--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -24,6 +24,7 @@ PIG_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2 (Pig 0.9.1)
 PIG_VERSION.ITEM.CLOUDERA_0.20_CDH3U1=Cloudera 0.20 CDH3U1
 PIG_VERSION.ITEM.MAPR=MapR 1.2.0
 PIG_VERSION.ITEM.MAPR2=MapR 2.0.0
+PIG_VERSION.ITEM.MAPR212=MapR 2.1.2
 PIG_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Pig 0.9.2)
 PIG_VERSION.ITEM.CLOUDERA_CDH4=Cloudera CDH4
 PIG_VERSION.ITEM.MapR_EMR=MapR 1.2.8
