feature TDI-25417 : Add the support of MapR 2.1.2 for hadoop cluster versions (hadoop cluster in repository + oozie)
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@100805 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hbaseprovider/plugin.xml
+++ b/org.talend.repository.hbaseprovider/plugin.xml
@@ -58,6 +58,10 @@
             index="HBASE:MAPR:MAPR2"
             libraries="commons-lang-2.5.jar;commons-logging-1.1.1.jar;hadoop-0.20.2-dev-core-mapr2.jar;hbase-0.92.1.jar;log4j-1.2.16.jar;zookeeper-3.3.2.jar;guava-r09.jar">
       </classloader>
+      <classloader
+            index="HBASE:MAPR:MAPR212"
+            libraries="commons-lang-2.5.jar;commons-logging-1.1.1.jar;hadoop-0.20.2-dev-core-mapr212.jar;hbase-0.92.2-mapr.jar;log4j-1.2.16.jar;zookeeper-3.3.6.jar;guava-r09.jar">
+      </classloader>
    </extension>
 
 </plugin>
