bug TDI-25254 fixed : in lock module, item type does not display the right value .
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@100829 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster/plugin.xml
+++ b/org.talend.repository.hadoopcluster/plugin.xml
@@ -34,6 +34,7 @@
             folder="metadata/hadoop/hadoopcluster"
             icon="icons/hadoop-logo-16x16.png"
             isResouce="true"
+            key="repository.hadoopCluster"
             label="%hadoopCluster"
             ordinal="50"
             products="DI"
