bug TDI-25254 fixed : in lock module, item type does not display the right value .
git-svn-id: http://talendforge.org/svn/tos/trunk@100830 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.pigudf/plugin.xml
+++ b/org.talend.repository.pigudf/plugin.xml
@@ -84,6 +84,7 @@
             folder="code/pigudf"
             icon="icons/pigudf.gif"
             isResouce="true"
+            key="repository.pigUdf"
             label="%NavigatorContent.pigUdf"
             ordinal="4"
             parentNodeType="CODE"
