bug TUP-339 fixed:<DQSH>:Use CNF to hide the nodes in TOS_BD
git-svn-id: http://talendforge.org/svn/tos/trunk@100880 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tos.bigdata/plugin.xml
+++ b/org.talend.rcp.branding.tos.bigdata/plugin.xml
@@ -118,6 +118,43 @@
                </override>
                <triggerPoints></triggerPoints>
             </navigatorContent>
+            <navigatorContent
+                  activeByDefault="true"
+                  contentProvider="org.talend.repository.viewer.content.EmptyContentProvider"
+                  id="org.talend.repository.viewer.root.metadata.removed"
+                  labelProvider="org.talend.repository.viewer.label.EmptyLabelProvider"
+                  name="Metadata Removed"
+                  priority="high">
+               <override
+                     policy="InvokeAlwaysRegardlessOfSuppressedExt"
+                     suppressedExtensionId="org.talend.repository.viewer.root.metadata">
+               </override>
+               <triggerPoints>
+                  <or>
+                     <adapt
+                           type="org.talend.repository.model.ProjectRepositoryNode">
+                     </adapt>
+                     <instanceof
+                           value="org.talend.repository.model.ProjectRepositoryNode">
+                     </instanceof>
+                     <test
+                           forcePluginActivation="true"
+                           property="org.talend.repository.node.isMetadataTopNode">
+                     </test>
+                  </or>
+               </triggerPoints>
+               <possibleChildren>
+                  <and>
+                     <instanceof
+                           value="org.talend.repository.model.RepositoryNode">
+                     </instanceof>
+                     <test
+                           forcePluginActivation="true"
+                           property="org.talend.repository.node.isMetadataTopNode">
+                     </test>
+                  </and>
+               </possibleChildren>
+            </navigatorContent>
          </extension>
          
          
