Fix Bug TDI-25343 : Need unify hadoop version value of HDFS components to other hadoop components. https://jira.talendforge.org/browse/TDI-25343
git-svn-id: http://talendforge.org/svn/tos/trunk@100904 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -21,12 +21,12 @@ PIG_VERSION.NAME=Version
 PIG_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 PIG_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 PIG_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2 (Pig 0.9.1)
-PIG_VERSION.ITEM.CLOUDERA_0.20_CDH3U1=Cloudera 0.20 CDH3U1
-PIG_VERSION.ITEM.MAPR=MapR 1.2.0
+PIG_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
+PIG_VERSION.ITEM.MAPR1=MapR 1.2.0
 PIG_VERSION.ITEM.MAPR2=MapR 2.0.0
 PIG_VERSION.ITEM.MAPR212=MapR 2.1.2
 PIG_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Pig 0.9.2)
-PIG_VERSION.ITEM.CLOUDERA_CDH4=Cloudera CDH4
+PIG_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 PIG_VERSION.ITEM.MapR_EMR=MapR 1.2.8
 PIG_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Pig 0.9.2)
 
