--- a/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
@@ -98,10 +98,10 @@ DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.MAPR=MapR
 
 DB_VERSION.NAME=Hadoop version
-DB_VERSION.ITEM.Cloudera_0.20_CDH3U1=Cloudera 0.20 CDH3U1
-DB_VERSION.ITEM.MapR=MapR 1.2.0 (Sqoop 1.3)
-DB_VERSION.ITEM.MapR2=MapR 2.0.0 (Sqoop 1.4)
-DB_VERSION.ITEM.MapR212=MapR 2.1.2 (Sqoop 1.4.2)
+DB_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
+DB_VERSION.ITEM.MAPR1=MapR 1.2.0 (Sqoop 1.3)
+DB_VERSION.ITEM.MAPR2=MapR 2.0.0 (Sqoop 1.4)
+DB_VERSION.ITEM.MAPR212=MapR 2.1.2 (Sqoop 1.4.2)
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
