--- a/org.talend.designer.components.bigdata/components/tHDFSList/tHDFSList_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSList/tHDFSList_messages.properties
@@ -21,11 +21,11 @@ AUTHENTICATION_MODE.ITEM.UGI=Usergroup
 
 DB_VERSION.NAME=Hadoop version
 DB_VERSION.ITEM.APACHE_0_20_204=Apache 0.20.204
-DB_VERSION.ITEM.Cloudera_0.20_CDH3U1=Cloudera 0.20 CDH3U1
+DB_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 DB_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2
-DB_VERSION.ITEM.MapR=MapR 1.2.0
-DB_VERSION.ITEM.MapR2=MapR 2.0.0
-DB_VERSION.ITEM.MapR212=MapR 2.1.2
+DB_VERSION.ITEM.MAPR1=MapR 1.2.0
+DB_VERSION.ITEM.MAPR2=MapR 2.0.0
+DB_VERSION.ITEM.MAPR212=MapR 2.1.2
 DB_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
