bug TDI-25363 fixed : Change GUI part
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@100964 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster/plugin.xml
+++ b/org.talend.repository.hadoopcluster/plugin.xml
@@ -19,7 +19,7 @@
    <extension
          point="org.talend.core.repository.repository_handler">
       <RepositoryHandler
-            class="org.talend.repository.hadoopcluster.HadoopClusterDragAndDropHandler">
+            class="org.talend.repository.hadoopcluster.ui.dnd.HadoopClusterDragAndDropHandler">
       </RepositoryHandler>
    </extension>
    <extension point="org.eclipse.emf.ecore.extension_parser">
