bug TDI-25254 fixed : in lock module, item type does not display the right value .
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@101000 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hcatalog/plugin.xml
+++ b/org.talend.repository.hcatalog/plugin.xml
@@ -15,7 +15,7 @@
             folder="metadata/hadoop/hcatalog"
             icon="icons/HCatalog_icon16.png"
             isResouce="true"
-            key="repository.hcatalog"
+            key="HCatalog"
             label="%hcatalog"
             ordinal="51"
             parentNodeType="HADOOPCLUSTER"
