tCOuchDB components reorganization.
git-svn-id: http://talendforge.org/svn/tos/trunk@101218 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCouchDBConnection/tCouchDBConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchDBConnection/tCouchDBConnection_messages.properties
@@ -1,7 +1,7 @@
 PROPERTY.NAME=Property Type
 DATABASE.NAME=Database
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.COUCHDB_1_0_2=COUCHDB_1.0.2
+DB_VERSION.ITEM.COUCHDB_1_0_2=CouchDB 1.0.2
 HELP=org.talend.help.tCouchDBConnection
 HOST.NAME=Server
 LONG_NAME=Create a connection to a CouchDB server
