--- a/org.talend.designer.components.bigdata/components/tCouchDBOutput/tCouchDBOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchDBOutput/tCouchDBOutput_messages.properties
@@ -3,7 +3,7 @@ HELP=org.talend.help.tCouchDBInput
 LONG_NAME=Inserts or updates documents into a CouchDB database
 DATABASE.NAME=Database
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.COUCHDB_1_0_2=COUCHDB_1.0.2
+DB_VERSION.ITEM.COUCHDB_1_0_2=CouchDB 1.0.2
 
 HOST.NAME=Server
 NB_LINE.NAME=NB_LINE
