Fix Bug TDI-25530 : Need to change the output links of the tPigMap to use pig link instead of main flow link. https://jira.talendforge.org/browse/TDI-25530
git-svn-id: http://talendforge.org/svn/tos/trunk@101243 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigMap/tPigMap_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigMap/tPigMap_messages.properties
@@ -7,3 +7,5 @@ LINK_STYLE.ITEM.AUTO=Auto
 LINK_STYLE.ITEM.BEZIER_CURVE=Curves 
 LINK_STYLE.ITEM.LINE=Lines (fast)
 
+PIGCOMBINE.LINK=Pig
+PIGCOMBINE.MENU=Pig Combine
