bug TDI-25543 fixed:pig udp "open another version" lost
git-svn-id: http://talendforge.org/svn/tos/trunk@101424 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.pigudf/plugin.xml
+++ b/org.talend.repository.pigudf/plugin.xml
@@ -121,5 +121,11 @@
             level="10"
             name="%NavigatorContent.action.editPigudfProperties">
       </Action>
+      <Action
+            class="org.talend.repository.pigudf.actions.OpenPigudfExistVersionProcessAction"
+            id="org.talend.repository.pigudf.actions.OpenPigudfExistVersionProcessAction"
+            level="10"
+            name="%NavigatorContent.action.openPigudfExistVersionProcess">
+      </Action>
    </extension>
 </plugin>
