--- a/org.talend.repository.pigudf/plugin.properties
+++ b/org.talend.repository.pigudf/plugin.properties
@@ -3,3 +3,4 @@ NavigatorContent.action.createPigudf=Create Pig UDF
 NavigatorContent.action.editPigudf=Edit Pig UDF
 NavigatorContent.action.readPigudf=Read Pig UDF
 NavigatorContent.action.editPigudfProperties=Edit Properties
+NavigatorContent.action.openPigudfExistVersionProcess=open another version
