fix Work Item TDI-25583: Add custom mode for HCatalog components https://jira.talendforge.org/browse/TDI-25583
git-svn-id: http://talendforge.org/svn/tos/trunk@101551 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHCatalogInput/tHCatalogInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogInput/tHCatalogInput_messages.properties
@@ -7,6 +7,7 @@ VERSION.NAME=Version
 
 DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
+DISTRIBUTION.ITEM.CUSTOM=Custom
 
 HCAT_VERSION.NAME=HCatalog version
 HCAT_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
