--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -34,7 +34,7 @@ ADVANCED_CONFIGURATION.NAME=Advanced configuration
 DRIVER_JAR.NAME=Register jar
 DRIVER_JAR.ITEM.JAR_NAME=Lib path
 
-HBASE_CONFIGURATION.NAME=Hbase Configuration
+CONFIGURATION.NAME=Configuration
 
 ZOOKEEPER_QUORUM.NAME=Zookeeper quorum 
 ZOOKEEPER_CLIENT_PORT.NAME=Zookeeper client port
