--- a/org.talend.designer.components.bigdata/components/tHCatalogOutput/tHCatalogOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogOutput/tHCatalogOutput_messages.properties
@@ -7,6 +7,7 @@ VERSION.NAME=Version
 
 DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
+DISTRIBUTION.ITEM.CUSTOM=Custom
 
 HCAT_VERSION.NAME=HCatalog version
 HCAT_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
