Modify the messages.properties for Hadoop components in order to show that the custom mode is not supported.
git-svn-id: http://talendforge.org/svn/tos/trunk@101585 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
@@ -21,7 +21,7 @@ DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.APACHE=Apache
 DISTRIBUTION.ITEM.MAPR=MapR
-DISTRIBUTION.ITEM.CUSTOM=Custom
+DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
 
 HBASE_VERSION.NAME=HBase version
