Fix Bug TDI-25591 : support directory source for tHDFSGet https://jira.talendforge.org/browse/TDI-25591
git-svn-id: http://talendforge.org/svn/tos/trunk@101656 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages.properties
@@ -60,3 +60,5 @@ NAMENODE_PRINCIPAL.NAME=Namenode principal
 CONN.NAME=Connection
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+
+INCLUDSUBDIR.NAME=Includes subdirectories
