fix Bug TDI-25775: tPigStoreResult URL Lable is misleading https://jira.talendforge.org/browse/TDI-25775
git-svn-id: http://talendforge.org/svn/tos/trunk@102104 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -3,7 +3,7 @@ LONG_NAME=Store the result into a given file.
 
 HCAT_CONFIGURATION.NAME=HCatalog Configuration
 
-OUTPUT_FILENAME.NAME=Result file URI
+OUTPUT_FILENAME.NAME=Result Folder URI
 
 FIELD_SEPARATOR_CHAR.NAME=Field separator 
 
