--- a/org.talend.designer.components.tishadoopprovider/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -3,7 +3,7 @@ LONG_NAME=Store the result into a given file.
 
 HCAT_CONFIGURATION.NAME=HCatalog Configuration
 
-OUTPUT_FILENAME.NAME=Result file URI
+OUTPUT_FILENAME.NAME=Result Folder URI
 
 FIELD_SEPARATOR_CHAR.NAME=Field separator 
 
