Fix Bug TDI-25827: tCouchBaseInput Missing Long_Name in pallet https://jira.talendforge.org/browse/TDI-25827
git-svn-id: http://talendforge.org/svn/tos/trunk@102703 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCouchbaseInput/tCouchbaseInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchbaseInput/tCouchbaseInput_messages.properties
@@ -1,3 +1,5 @@
+LONG_NAME=Read documents from couchbase based on query options
+HELP=org.talend.help.tCouchbaseInput
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
 ENCODING.NAME=Encoding
 CONNECTION.NAME=Component List
