--- a/org.talend.designer.components.bigdata/components/tCouchbaseOutput/tCouchbaseOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchbaseOutput/tCouchbaseOutput_messages.properties
@@ -33,8 +33,8 @@ GROUP.NAME=Group by
 GROUPBYS.ITEM.INPUT_COLUMN=Input column
 GROUPBYS.ITEM.OUTPUT_COLUMN=Output column
 GROUPBYS.NAME=Group by
-HELP=org.talend.help.tWriteJSONField
-LONG_NAME=Creates an JSON structure from rows broken down into fields 
+HELP=org.talend.help.tCouchbaseOutput
+LONG_NAME=Inserts or updates documents into Couchbase
 LOOP.ITEM.ATTRIBUTE=Attribute
 LOOP.ITEM.ORDER=Order
 LOOP.ITEM.COLUMN=Related Column
