bug TDI-26082 fixed : Pig UDF: Missing some options at R-click drop down menu list .
git-svn-id: http://talendforge.org/svn/tos/trunk@103094 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.pigudf/plugin.xml
+++ b/org.talend.repository.pigudf/plugin.xml
@@ -103,21 +103,21 @@
       <Action
             class="org.talend.repository.pigudf.actions.EditPigudfAction"
             id="org.talend.repository.pigudf.actions.EditPigudfAction"
-            isEditAction="false"
-            isPropertiesAction="false"
-            isReadAction="false"
+            isEditAction="true"
             level="10"
             name="%NavigatorContent.action.editPigudf">
       </Action>
       <Action
             class="org.talend.repository.pigudf.actions.ReadPigudfAction"
             id="org.talend.repository.pigudf.actions.ReadPigudfAction"
+            isReadAction="true"
             level="10"
             name="%NavigatorContent.action.readPigudf">
       </Action>
       <Action
             class="org.talend.repository.pigudf.actions.EditPigudfPropertiesAction"
             id="org.talend.repository.pigudf.actions.EditPigudfPropertiesAction"
+            isPropertiesAction="true"
             level="10"
             name="%NavigatorContent.action.editPigudfProperties">
       </Action>
