Fix Bug TDI-26189 : make tSqoopImportXXXX work with custom https://jira.talendforge.org/browse/TDI-26189
git-svn-id: http://talendforge.org/svn/tos/trunk@103414 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -104,6 +104,7 @@ DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.MAPR=MapR
+DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 
 DB_VERSION.NAME=Hadoop version
 DB_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
