--- a/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
@@ -88,6 +88,8 @@ DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.MAPR=MapR
+DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
+
 
 DB_VERSION.NAME=Hadoop version
 DB_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
