bug TDI-25921 fixed: failed to connect to hbase wizard in the mapr metadata, I keep receiving warning information in the view:error log
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@104191 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hbaseprovider/plugin.xml
+++ b/org.talend.repository.hbaseprovider/plugin.xml
@@ -60,8 +60,27 @@
       </classloader>
       <classloader
             index="HBASE:MAPR:MAPR212"
-            libraries="commons-lang-2.5.jar;commons-logging-1.1.1.jar;hadoop-0.20.2-dev-core-mapr212.jar;hbase-0.92.2-mapr.jar;log4j-1.2.16.jar;zookeeper-3.3.6.jar;guava-r09.jar">
+            libraries="commons-lang-2.5.jar;commons-logging-1.1.1.jar;hadoop-0.20.2-dev-core-mapr212.jar;hbase-0.94.5-mapr.jar;log4j-1.2.16.jar;zookeeper-3.4.5.jar;guava-r09.jar;slf4j-api-1.4.3.jar;slf4j-log4j12-1.4.3.jar;protobuf-java-2.4.0a.jar">
       </classloader>
+   </extension>
+   <extension
+         point="org.talend.core.runtime.librariesNeeded">
+      <libraryNeeded
+            context="HBASE"
+            language="java"
+            message="Required for using the HBase DB Connection Wizard"
+            name="hbase-0.94.5-mapr.jar"
+            required="true"
+            uripath="platform:/plugin/org.talend.libraries.hadoop.mapr2/lib/hbase-0.94.5-mapr.jar">
+      </libraryNeeded>
+      <libraryNeeded
+            context="HBASE"
+            language="java"
+            message="Required for using the HBase DB Connection Wizard"
+            name="zookeeper-3.4.5.jar"
+            required="true"
+            uripath="platform:/plugin/org.talend.libraries.zookeeper/lib/zookeeper-3.4.5.jar">
+      </libraryNeeded>
    </extension>
 
 </plugin>
