TDI-26656 fixed: Fix the message properties for the tCouchDBOutput
git-svn-id: http://talendforge.org/svn/tos/trunk@105012 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCouchDBOutput/tCouchDBOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchDBOutput/tCouchDBOutput_messages.properties
@@ -1,5 +1,5 @@
 PROPERTY.NAME=Property Type
-HELP=org.talend.help.tCouchDBInput
+HELP=org.talend.help.tCouchDBOutput
 LONG_NAME=Inserts or updates documents into a CouchDB database
 DATABASE.NAME=Database
 DB_VERSION.NAME=DB Version
@@ -59,8 +59,8 @@ DATA_ACTION.ITEM.UPDATE=Update
 DATA_ACTION.NAME=Action on data
 DIE_ON_ERROR.NAME=Die on error
 
-JSON_CONFIGURATION.NAME=JSON Confiuration
-REMOVE_ROOT.NAME=Remove root node.
+JSON_CONFIGURATION.NAME=JSON Configuration
+REMOVE_ROOT.NAME=Remove root node
 IS_VIRTUAL_COMPONENT.NAME=Generate JSON Document
 KEY.NAME=Key
 VALUE.NAME=Value
