Fix Feature TDI-26768 : Support for HDP 1.3 for DI in 5.4 https://jira.talendforge.org/browse/TDI-26768
git-svn-id: http://talendforge.org/svn/tos/trunk@105274 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -71,6 +71,7 @@ DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
 HBASE_VERSION.NAME=Version
 HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 HBASE_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
+HBASE_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0
 HBASE_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2 (HBase 0.90.1)
 HBASE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 HBASE_VERSION.ITEM.MAPR1=MapR 1.2.0
@@ -82,3 +83,5 @@ HBASE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (HBase 0.92.0)
 
 CUSTOM_JARS.NAME=Custom jars
 CUSTOM_JARS.ITEM.JAR_NAME=Jar name
+
+HBASE_CONFIGURATION.NAME=Hbase Configuration
