--- a/org.talend.designer.components.bigdata/components/tHCatalogLoad/tHCatalogLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogLoad/tHCatalogLoad_messages.properties
@@ -12,6 +12,7 @@ DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 HCAT_VERSION.NAME=HCatalog version
 HCAT_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 HCAT_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
+HCAT_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0
 
 TEMPLETON_CONFIGURATION.NAME=Templeton Configuration
 TEMPLETON_HOST.NAME=Templeton hostname
