--- a/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
@@ -105,9 +105,14 @@ DB_VERSION.ITEM.MAPR2=MapR 2.0.0 (Sqoop 1.4)
 DB_VERSION.ITEM.MAPR212=MapR 2.1.2 (Sqoop 1.4.2)
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
+DB_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 MAPRED_JOB_TRACKER.NAME=JobTracker Host
 
 CONFIGURATION.NAME=Configuration
+
+HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties 
+HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
+HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
