Fix Feature TDI-26852 : tHDFSInput should be able to auto consume multiple files https://jira.talendforge.org/browse/TDI-26852
git-svn-id: http://talendforge.org/svn/tos/trunk@105604 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
@@ -41,6 +41,7 @@ FS_DEFAULT_NAME.NAME=NameNode URI
 USERNAME.NAME=User name
 GROUP.NAME=Group
 FILENAME.NAME=File Name
+INCLUDSUBDIR.NAME=Includes subdirectories if path is directory
 
 HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties 
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
