Fix Feature TDI-26862 : Add CopyMerge Option in the HDFS components https://jira.talendforge.org/browse/TDI-26862
git-svn-id: http://talendforge.org/svn/tos/trunk@105801 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHDFSCopy/tHDFSCopy_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSCopy/tHDFSCopy_messages.properties
@@ -59,3 +59,6 @@ SOURCE_FILEPATH.NAME=Source file or directory path
 CONN.NAME=Connection
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+
+MERGE.NAME=Copy Merge
+MERGENAME.NAME=Merge Name
